# reasoning-monitor

./: .coverage  .gitignore  README.md  pyproject.toml
benchmarks/: README.md  adversarial_cot_dataset.py  results.tsv  run_benchmark.py  run_frontier_benchmark.py  sweep_embedding_thresholds.py  sweep_thresholds.py  test_ensemble.py  test_multi_step.py  test_per_detector_thresholds.py  test_semantic_boundary.py
examples/: basic_usage.py
reasoning_monitor/: __init__.py  monitor.py  schemas.py
reasoning_monitor/detectors/: __init__.py  anomaly.py  embedding_detector.py  injection.py  keyword_scorer.py  leakage.py  llm_detector.py  manipulation.py
reasoning_monitor/utils/: __init__.py  scorer.py  tokenizer.py
tests/: test_detectors.py  test_frontier_detectors.py  test_monitor.py  test_scorer.py
